--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,9 @@ ga('send', 'pageview');
                 <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
 
-                
+                <li class="nav-item">
+                <a class="nav-link" href="https://nan.is-a.dev/project">Project</a>
+                </li>
 
                 {% include search-lunr.html %}
 
