--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ post_class: post-template
             </div>
 
             <!-- Adsense if enabled from _config.yml (change your pub id and slot) -->
-            {% if site.adsense == "disable" %}
+            {% if site.adsense == "enabled" %}
                 {% include adsense-under-header.html %}
             {% endif %}
             <!-- End Adsense -->
