--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta  property="fb:admins"  content="{https://www.facebook.com/nan.phtml}"/>
+<meta  property="fb:app_id"  content="756630065295142"  />
+<meta  property="fb:admins"  content="756630065295142"/>
 <meta name="theme-color" content="#1c9862">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
