--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,7 @@
 <title>{{ page.title }} | {{site.name}}</title>
 
 {% seo %}
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+   
 <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
 
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
@@ -23,7 +21,8 @@
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
 </head>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v13.0&appId=756630065295142&autoLogAppEvents=1" nonce="8ZTSlgY3"></script>
 {% if jekyll.environment == 'production' %}
 <!-- change your GA id in _config.yml -->
 <script>
