--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,11 +1,4 @@
 <section class="disqus">
     <div id="disqus_thread"></div>
-    <div  id="fb-root"></div>
-<script>(function(d, s, id) {
-var  js, fjs = d.getElementsByTagName(s)[0];
-if (d.getElementById(id)) return;
-js = d.createElement(s); js.id = id;
-js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=756630065295142";
-fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+    <div class="fb-comments" data-href="https://kisahpetani.github.io" data-width="" data-numposts="5"></div>
 </section>
