--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -143,10 +143,10 @@ post_class: post-template
 <!-- Begin Comments
 ================================================== -->
 {% if page.comments != false %}
-    <div class="container">
+    <div class="container text-center">
         <div id="comments" class="row justify-content-center mb-5">
             <div class="col-md-8">
-                {% include disqus.html %}
+                {% include fb.html %}
             </div>
         </div>
     </div>
