--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -144,10 +144,11 @@ post_class: post-template
 ================================================== -->
 {% if page.comments != false %}
     <div class="container text-center">
-        
+        <div id="comments" class="row justify-content-center mb-5">
+            <div class="col-md-8">
                 {% include fb.html %}
-           
-      
+        </div>   
+      </div>
     </div>
 {% endif %}
 <!--End Comments
