--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta property="fb:admins" content="&#123;nan.phtml&#125;"/>
+<meta property="fb:admins" content="&#123;100012540191080&#125;"/>
 <meta property="fb:app_id" content="&#123;756630065295142&#125;"/>
 <meta name="theme-color" content="#1c9862">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
